:poop: Try to fix overflow on mobile

--- a/styles/global.css
+++ b/styles/global.css
@@ -14,6 +14,7 @@ body,
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   font-family: 'Playfair Display', serif;
+  overflow: hidden;
 }
 
 /* root container for analytics and about page */
